security fix on THM badge (rel="noopener noreferrer")
Add rel attribute to external link for security.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ footer {
   <p class="subtitle">my space for learning and building things</p>
 
   <div class="badge-thm-wrapper">
-    <a href="https://tryhackme.com/p/taww" target="_blank">
+    <a href="https://tryhackme.com/p/taww" target="_blank" rel="noopener noreferrer">
       <img src="https://tryhackme-badges.s3.amazonaws.com/taww.png" alt="THM Badge" width="280">
     </a>
   </div>
